# picolino

./: .gitignore  .gitmodules  .ignore  CMakeLists.txt  README.md  compile_flags.txt
accel/: CMakeLists.txt
accel/includes/: common.h  picolino_spi.h
accel/includes/lis3dh/: registers.h
accel/src/: main.cpp  picolino_spi.cpp
ael-test/: CMakeLists.txt  main.cpp
blinky/: CMakeLists.txt  blink.cpp
extern-oled-examples/: CMakeLists.txt
extern-oled-examples/examples/: EPD_Test.h  LCD_0in96_test.c
extern-oled-examples/lib/LCD/: LCD_0in96.h  LCD_1in14.c
extern-oled-examples/lib/OLED/: OLED_2in23.c
helloworld/: CMakeLists.txt  hello_usb.cpp
hw-oled/: CMakeLists.txt
hw-oled/includes/: ImageData.h  oled_test.h
hw-oled/src/: main.cpp  oled_test.c
libs/ael/: .clang_format  README.md  array.h
libs/lis3dh/include/lis3dh/: registers.h
libs/oled-drv/: CMakeLists.txt  README.md
libs/oled-drv/includes/: DEV_Config.h  GUI_Paint.h  OLED_1in3_c.h
libs/oled-drv/src/: DEV_Config.c  GUI_Paint.c  OLED_1in3_c.c  font12.c
libs/pico-oled/: CMakeLists.txt  README.md
libs/pico-oled/includes/pico-oled/: Debug.h  fonts.h
libs/pico-oled/src/: DEV_Config.c  GUI_Paint.c  OLED_1in3_c.c  font8.c
lis3dh/: CMakeLists.txt
lis3dh/includes/: picolino_spi.h
lis3dh/includes/lis3dh/: README.md  registers.h
lis3dh/src/: main.cpp  picolino_spi.cpp
multicore/: CMakeLists.txt
multicore/src/: main.cpp
timer/: CMakeLists.txt
timer/src/: main.cpp
